--- a/signin.html
+++ b/signin.html
@@ -16,20 +16,8 @@
 <div class="root">
     <div class="background">
         <main class="content">
-            <form class="form" id="form">
-                <label class="form__title" for="form">Sign Up</label>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/name.svg" alt="">
-                    </div>
-                    <input class="form__input" placeholder="First Name" type="text">
-                </div>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/name.svg" alt="">
-                    </div>
-                    <input class="form__input" placeholder="Last Name" type="text">
-                </div>
+            <form class="form form_padding" id="form">
+                <label class="form__title" for="form">Sign In</label>
                 <div class="form__input-wrapper">
                     <div class="logo">
                         <img class="logo__image" src="assets/icons/mail.svg" alt="">
@@ -42,21 +30,20 @@
                     </div>
                     <input class="form__input" placeholder="Password" type="text">
                 </div>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/confirm-password.svg" alt="">
-                    </div>
-                    <input class="form__input" placeholder="Confirm Password" type="text">
-                </div>
+
                 <a class="link-button" href="">
-                    <button class="link-button__button">Sign Up</button>
+                    <button class="link-button__button link-button__button_size">Sign In</button>
 
                 </a>
+
+                <div class="question-link question-link_sign-in-position">
+                    <a class="question-link__link" href="">Forgot Password?</a>
+                </div>
             </form>
 
-            <div class="question-link">
-                <div class="question-link__text">Already have an account?</div>
-                <a class="question-link__link" href="./signin.html">Sign in</a>
+            <div class="question-link question-link_size">
+                <div class="question-link__text">Don't have an account?</div>
+                <a class="question-link__link" href="./signup.html">Sign up</a>
             </div>
         </main>
     </div>
