--- a/restore-password.html
+++ b/restore-password.html
@@ -17,34 +17,31 @@
     <div class="background">
         <main class="content">
             <form class="form form_padding" id="form">
-                <label class="form__title" for="form">Sign In</label>
+                <div class="form__label">
+                    <a class="form__back-arrow-link" href="./signin.html">
+                        <img class="form__back-arrow-link-image" src="./assets/icons/angle-left-b.svg" alt="arrow">
+                    </a>
+
+                    <label class="form__title form__title_size_restore-password" for="form">
+                        Restore Password</label>
+                </div>
+
+                <div class="form__description">
+                    Please use your email address, and we’ll send you the link to reset your password
+                </div>
                 <div class="form__input-wrapper">
                     <div class="logo">
                         <img class="logo__image" src="assets/icons/mail.svg" alt="">
                     </div>
                     <input class="form__input" placeholder="Email" type="text">
                 </div>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/password.svg" alt="">
-                    </div>
-                    <input class="form__input" placeholder="Password" type="text">
-                </div>
 
                 <a class="link-button" href="">
-                    <button class="link-button__button link-button__button_size">Sign In</button>
+                    <button class="link-button__button link-button__button_size_restore-password">Send Reset Link
+                    </button>
 
                 </a>
-
-                <div class="question-link question-link_sign-in-position">
-                    <a class="question-link__link" href="./restore-password.html">Forgot Password?</a>
-                </div>
             </form>
-
-            <div class="question-link question-link_size">
-                <div class="question-link__text">Don't have an account?</div>
-                <a class="question-link__link" href="./signup.html">Sign up</a>
-            </div>
         </main>
     </div>
 </div>
