--- a/restore-password.html
+++ b/restore-password.html
@@ -29,10 +29,7 @@
                 <div class="form__description">
                     Please use your email address, and we’ll send you the link to reset your password
                 </div>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/mail.svg" alt="">
-                    </div>
+                <div class="form__input-wrapper form__input-wrapper_email">
                     <input class="form__input" placeholder="Email" type="text">
                 </div>
 
