--- a/signup.html
+++ b/signup.html
@@ -18,35 +18,25 @@
         <main class="content">
             <form class="form" id="form">
                 <label class="form__title" for="form">Sign Up</label>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/name.svg" alt="">
-                    </div>
+                <div class="form__input-wrapper form__input-wrapper_first-name">
                     <input class="form__input" placeholder="First Name" type="text">
+
                 </div>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/name.svg" alt="">
-                    </div>
+                <div class="form__input-wrapper form__input-wrapper_last-name">
                     <input class="form__input" placeholder="Last Name" type="text">
+
                 </div>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/mail.svg" alt="">
-                    </div>
+                <div class="form__input-wrapper form__input-wrapper_email">
                     <input class="form__input" placeholder="Email" type="text">
+
                 </div>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/password.svg" alt="">
-                    </div>
+                <div class="form__input-wrapper form__input-wrapper_password">
                     <input class="form__input" placeholder="Password" type="text">
+
                 </div>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/confirm-password.svg" alt="">
-                    </div>
+                <div class="form__input-wrapper form__input-wrapper_confirm-password">
                     <input class="form__input" placeholder="Confirm Password" type="text">
+
                 </div>
                 <a class="link-button" href="">
                     <button class="link-button__button">Sign Up</button>
@@ -61,5 +51,6 @@
         </main>
     </div>
 </div>
+<script src="./js/script.js"></script>
 </body>
 </html>
