--- a/signin.html
+++ b/signin.html
@@ -18,19 +18,12 @@
         <main class="content">
             <form class="form form_padding" id="form">
                 <label class="form__title" for="form">Sign In</label>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/mail.svg" alt="">
-                    </div>
+                <div class="form__input-wrapper form__input-wrapper_email">
                     <input class="form__input" placeholder="Email" type="text">
                 </div>
-                <div class="form__input-wrapper">
-                    <div class="logo">
-                        <img class="logo__image" src="assets/icons/password.svg" alt="">
-                    </div>
+                <div class="form__input-wrapper form__input-wrapper_password">
                     <input class="form__input" placeholder="Password" type="text">
                 </div>
-
                 <a class="link-button" href="">
                     <button class="link-button__button link-button__button_size">Sign In</button>
 
@@ -48,5 +41,6 @@
         </main>
     </div>
 </div>
+<script src="./js/script.js"></script>
 </body>
 </html>
