task-1: fix responsive, add reset-password

--- a/restore-password.html
+++ b/restore-password.html
@@ -14,8 +14,8 @@
 </head>
 <body>
 <div class="root">
-    <div class="background">
-        <main class="content">
+    <div class="background background_password">
+        <main class="content content_password">
             <form class="form form_padding" id="form">
                 <div class="form__label">
                     <a class="form__back-arrow-link" href="./signin.html">
@@ -33,7 +33,7 @@
                     <input class="form__input" placeholder="Email" type="text">
                 </div>
 
-                <a class="link-button" href="">
+                <a class="link-button" href="#" >
                     <button class="link-button__button link-button__button_size_restore-password">Send Reset Link
                     </button>
 
@@ -42,5 +42,6 @@
         </main>
     </div>
 </div>
+<script src="./js/reset-password.js"></script>
 </body>
 </html>
