--- a/signin.html
+++ b/signin.html
@@ -14,8 +14,8 @@
 </head>
 <body>
 <div class="root">
-    <div class="background">
-        <main class="content">
+    <div class="background background_sign-in">
+        <main class="content content_sign-in">
             <form class="form form_padding" id="form">
                 <label class="form__title" for="form">Sign In</label>
                 <div class="form__input-wrapper form__input-wrapper_email">
