task-1: fix design issues

--- a/restore-password.html
+++ b/restore-password.html
@@ -16,7 +16,7 @@
 <div class="root">
     <div class="background background_password">
         <main class="content content_password">
-            <form class="form form_padding" id="form">
+            <form class="form form_password" id="form">
                 <div class="form__label">
                     <a class="form__back-arrow-link" href="./signin.html">
                         <img class="form__back-arrow-link-image" src="./assets/icons/angle-left-b.svg" alt="arrow">
