--- a/signin.html
+++ b/signin.html
@@ -22,7 +22,7 @@
                     <input class="form__input" placeholder="Email" type="text">
                 </div>
                 <div class="form__input-wrapper form__input-wrapper_password">
-                    <input class="form__input" placeholder="Password" type="text">
+                    <input class="form__input" placeholder="Password" type="password">
                 </div>
                 <a class="link-button" href="">
                     <button class="link-button__button link-button__button_size">Sign In</button>
