--- a/signup.html
+++ b/signup.html
@@ -31,11 +31,11 @@
 
                 </div>
                 <div class="form__input-wrapper form__input-wrapper_password">
-                    <input class="form__input" placeholder="Password" type="text">
+                    <input class="form__input" placeholder="Password" type="password">
 
                 </div>
                 <div class="form__input-wrapper form__input-wrapper_confirm-password">
-                    <input class="form__input" placeholder="Confirm Password" type="text">
+                    <input class="form__input" placeholder="Confirm Password" type="password">
 
                 </div>
                 <a class="link-button" href="">
